packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_functional_component_2.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 347
expression: output
---
==INPUT==


import { $, component$, useStore } from '@khulnasoft.com/unisynth';
export const useCounter = () => {
    return useStore({count: 0});
}

export const STEP = 1;

export const App = component$((props) => {
    const state = useCounter();
    const thing = useStore({thing: 0});
    const STEP_2 = 2;

    const count2 = state.count * 2;
    return (
        <div onClick$={() => state.count+=count2 }>
            <span>{state.count}</span>
            {buttons.map(btn => (
                <button
                    onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
                >
                    {btn.name}
                </button>
            ))}

        </div>

    );
})

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
import { useStore } from '@khulnasoft.com/unisynth';
export const useCounter = ()=>{
    return useStore({
        count: 0
    });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAwB,QAAQ,QAAQ,mBAAmB;AAC3D,OAAO,MAAM,aAAa;IACtB,OAAO,SAAS;QAAC,OAAO;IAAC;AAC7B,EAAC;AAED,OAAO,MAAM,OAAO,EAAE;AAEtB,OAAO,MAAM,oBAAM,iHAoBjB\"}")
============================= test.tsx_App_component_div_onClick_1CGetmFZx0g.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/unisynth";
export const App_component_div_onClick_1CGetmFZx0g = ()=>{
    const [count2, state] = useLexicalScope();
    return state.count += count2;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";qDAeuB;;WAAM,MAAM,KAAK,IAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_onClick_1CGetmFZx0g",
  "entry": null,
  "displayName": "test.tsx_App_component_div_onClick",
  "hash": "1CGetmFZx0g",
  "canonicalFilename": "test.tsx_App_component_div_onClick_1CGetmFZx0g",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    366,
    391
  ]
}
*/
============================= test.tsx_App_component_div_button_onClick_f5NwW9e63a4.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/unisynth";
import { STEP } from "./test";
export const App_component_div_button_onClick_f5NwW9e63a4 = ()=>{
    const [btn, props, state, thing] = useLexicalScope();
    return state.count += btn.offset + thing + STEP + 2 + props.step;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;4DAmB8B;;WAAM,MAAM,KAAK,IAAI,IAAI,MAAM,GAAG,QAAQ,OARrD,IAQqE,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_onClick_f5NwW9e63a4",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_onClick",
  "hash": "f5NwW9e63a4",
  "canonicalFilename": "test.tsx_App_component_div_button_onClick_f5NwW9e63a4",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    522,
    590
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _fnSignal } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { _wrapSignal } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
import { useCounter } from "./test";
import { useStore } from "@khulnasoft.com/unisynth";
export const App_component_ckEPmXZlub0 = (props)=>{
    const state = useCounter();
    const thing = useStore({
        thing: 0
    });
    const count2 = state.count * 2;
    return /*#__PURE__*/ _jsxQ("div", {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_onClick_1CGetmFZx0g"), "App_component_div_onClick_1CGetmFZx0g", [
            count2,
            state
        ])
    }, null, [
        /*#__PURE__*/ _jsxQ("span", null, null, _fnSignal((p0)=>p0.count, [
            state
        ], "p0.count"), 3, null),
        buttons.map((btn)=>/*#__PURE__*/ _jsxQ("button", {
                onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_button_onClick_f5NwW9e63a4"), "App_component_div_button_onClick_f5NwW9e63a4", [
                    btn,
                    props,
                    state,
                    thing
                ])
            }, null, _wrapSignal(btn, "name"), 0, "u6_0"))
    ], 0, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;yCAQ8B,CAAC;IAC3B,MAAM,QAAQ;IACd,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAGhC,MAAM,SAAS,MAAM,KAAK,GAAG;IAC7B,qBACI,MAAC;QAAI,QAAQ;;;;;sBACT,MAAC,oCAAM,GAAM,KAAK;;;QACjB,QAAQ,GAAG,CAAC,CAAA,oBACT,MAAC;gBACG,QAAQ;;;;;;iCAEP;;AAOrB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    186,
    708
  ]
}
*/
== DIAGNOSTICS ==

[]
