packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_immutable_function_components.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2491
expression: output
---
==INPUT==


import { component$, useStore, Slot } from '@khulnasoft.com/unisynth';

export const App = component$((props: Stuff) => {
    return (
        <div>
            <Slot/>
        </div>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { _jsxC } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
import { Slot } from '@khulnasoft.com/unisynth';
const App_component_ckEPmXZlub0 = (props)=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, /*#__PURE__*/ _jsxC(Slot, null, 3, "u6_0"), 1, "u6_1");
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AACA,SAA+B,IAAI,QAAQ,mBAAmB;kCAEhC,CAAC;IAC3B,qBACI,MAAC,iCACG,MAAC;AAGb;AANA,OAAO,MAAM,oBAAM,+FAMhB\"}")
== DIAGNOSTICS ==

[]
