packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_import_assertion.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1931
expression: output
---
==INPUT==


import { component$, $ } from '@khulnasoft.com/unisynth';
import json from "./foo.json" assert { type: "json" };

export const Greeter = component$(() => {
    return json;
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAIA,OAAO,MAAM,wBAAU,yHAEpB\"}")
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.js (ENTRY POINT)==

import json from "./foo.json" with {
    type: "json"
};
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    return json;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"mCAEqC;IAAE,MAAM;AAAO;6CAElB;IAC9B,OAAO;AACX\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    142,
    168
  ]
}
*/
== DIAGNOSTICS ==

[]
